--- a/index.html
+++ b/index.html
@@ -19,23 +19,57 @@
                     </div>
                     <div class="mobileBackdrop"></div>
                     <div class="mobileNavButtons">
-                        <a class="homeButton headerButton" href="#">Evan's Exteriors</a>
-                        <a class="testimonialButton headerButton" href="#">Testimonials</a>
-                        <a class="aboutButton headerButton" href="#">About Evan</a>
+                        <a class="homeButton headerButton" href="index.html">Evan's Exteriors</a>
+                        <a class="aboutButton headerButton" href="about/about.html">About Evan</a>
                         <a id="callToActionButton" class="headerButton" href="#">Get a Quote!</a>
                     </div>
                 </div>
                 <div class="desktopNav">
                     <div class="headerFlex">
-                        <a class="homeButton headerButton" href="#">Evan's Exteriors</a>
-                        <a class="testimonialButton headerButton" href="#">Testimonials</a>
-                        <a class="aboutButton headerButton" href="#">About Evan</a>
+                        <a class="homeButton headerButton" href="index.html">Evan's Exteriors</a>
+                        <a class="aboutButton headerButton" href="about/about.html">About Evan</a>
                     </div>
                     <a id="callToActionButton" class="headerButton" href="#">Get a Quote!</a>
                 </div>
             </nav>
         </header>
-        <h1>Test</h1>
+        <div class="services">
+            <h1>Pressure Washing - Lawn Mowing</h1>
+        </div>
+        <div class="logoContainer">
+            <img class="logo" alt="Logo" src="images/logo.png">
+        </div>
+        <div class="smallLogoContainer">
+            <img class="logo" alt="Logo" src="images/smallLogo.png">
+        </div>
+        <div class="testimonials">
+            <div class="testimonialOne darkBackground">
+                <p>"Yo, this pressure washing service is legit! They unleashed a tsunami on my 
+                    filthy patio and left it sparkling like a unicorn's disco floor. Now my parents think 
+                    I'm a cleaning prodigy. It's like magic, but with water. 10/10 would recommend, fam!"</p>
+                    <label>-Jerry Johnson</label>
+            </div>
+            <div class="testimonialTwo">
+                <p>"Whoa, hold on to your gardening gloves! I stumbled upon this landscaping crew, and they're 
+                    like the rock stars of lawns! I swear, they sprinkle magic fertilizer or something because my 
+                    grass went from 'meh' to 'oh yeah!' It's so lush, my neighbor's jealous parrot moved in! And the 
+                    bushes? Sculpted like Michelangelo's masterpiece, but with hedge trimmers. My backyard is now a secret 
+                    garden, and I feel like the lord of horticulture! I'm tempted to throw a garden party just to show off. 
+                    These green thumbs are the real deal, folks. Trust me, they'll turn your yard into an Eden that'll make 
+                    Mother Nature jealous!"</p>
+                    <label>-Samantha McGuinn</label>
+            </div>
+            <div class="testimonialThree darkBackground">
+                <p>"Behold, fellow homeowners! Let me regale you with a tale of this 
+                    extraordinary lawn mowing service. As his blades danced across my yard, 
+                    a hidden secret was unearthed. Lo and behold, buried treasure! 
+                    He literally found a pirate's treasure chest! I'll never have to work again!"</p>
+                    <label>-George Hankson</label>
+            </div>
+        </div>
+        <div class="endButtonContainer">
+            <button class="endCallToAction">Book Now!</button>
+        </div>
     </body>
     <footer>
         <script src="main.js"></script>
