Updated Name and Logos

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Evan's Exteriors</title>
+        <title>Sam's Exteriors</title>
         <link rel="stylesheet" type="text/css" href="main.css">
         <link rel="icon" type="image/png" href="images/favicon.jpg">
         <meta name="descripton" 
@@ -19,15 +19,15 @@
                     </div>
                     <div class="mobileBackdrop"></div>
                     <div class="mobileNavButtons">
-                        <a class="homeButton headerButton" href="index.html">Evan's Exteriors</a>
-                        <a class="aboutButton headerButton" href="about/about.html">About Evan</a>
+                        <a class="homeButton headerButton" href="index.html">Sam's Exteriors</a>
+                        <a class="aboutButton headerButton" href="about/about.html">About Sam</a>
                         <a id="callToActionButton" class="headerButton" href="#">Get a Quote!</a>
                     </div>
                 </div>
                 <div class="desktopNav">
                     <div class="headerFlex">
-                        <a class="homeButton headerButton" href="index.html">Evan's Exteriors</a>
-                        <a class="aboutButton headerButton" href="about/about.html">About Evan</a>
+                        <a class="homeButton headerButton" href="index.html">Sam's Exteriors</a>
+                        <a class="aboutButton headerButton" href="about/about.html">About Sam</a>
                     </div>
                     <a id="callToActionButton" class="headerButton" href="#">Get a Quote!</a>
                 </div>
