Added the pricing page and styled

--- a/about/about.html
+++ b/about/about.html
@@ -22,7 +22,7 @@
                     <div class="mobileNavButtons">
                         <a class="homeButton headerButton" href="../index.html">Sam's Exteriors</a>
                         <a class="aboutButton headerButton" href="#">About Sam</a>
-                        <a id="callToActionButton" class="headerButton" href="#">Get a Quote!</a>
+                        <a id="callToActionButton" class="headerButton" href="../pricing/pricing.html">Book Now!</a>
                     </div>
                 </div>
                 <div class="desktopNav">
@@ -30,7 +30,7 @@
                         <a class="homeButton headerButton" href="../index.html">Sam's Exteriors</a>
                         <a class="aboutButton headerButton" href="#">About Sam</a>
                     </div>
-                    <a id="callToActionButton" class="headerButton" href="#">Get a Quote!</a>
+                    <a id="callToActionButton" class="headerButton" href="../pricing/pricing.html">Book Now!</a>
                 </div>
             </nav>
         </header>
@@ -50,7 +50,7 @@
             </div>
         </main>
         <div class="endButtonContainer">
-            <button class="endCallToAction">Book Now!</button>
+            <a href="pricing/pricing.html" class="endCallToAction">Book Now!</a>
         </div>
     </body>
     <footer>
