--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="mobileNavButtons">
                         <a class="homeButton headerButton" href="index.html">Sam's Exteriors</a>
                         <a class="aboutButton headerButton" href="about/about.html">About Sam</a>
-                        <a id="callToActionButton" class="headerButton" href="#">Get a Quote!</a>
+                        <a id="callToActionButton" class="headerButton" href="pricing/pricing.html">Book Now!</a>
                     </div>
                 </div>
                 <div class="desktopNav">
@@ -29,7 +29,7 @@
                         <a class="homeButton headerButton" href="index.html">Sam's Exteriors</a>
                         <a class="aboutButton headerButton" href="about/about.html">About Sam</a>
                     </div>
-                    <a id="callToActionButton" class="headerButton" href="#">Get a Quote!</a>
+                    <a id="callToActionButton" class="headerButton" href="pricing/pricing.html">Book Now!</a>
                 </div>
             </nav>
         </header>
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="endButtonContainer">
-            <button class="endCallToAction">Book Now!</button>
+            <a class="endCallToAction" href="pricing/pricing.html">Book Now!</a>
         </div>
     </body>
     <footer>
