--- a/about/about.html
+++ b/about/about.html
@@ -50,7 +50,7 @@
             </div>
         </main>
         <div class="endButtonContainer">
-            <a href="pricing/pricing.html" class="endCallToAction">Book Now!</a>
+            <a href="../pricing/pricing.html" class="endCallToAction">Book Now!</a>
         </div>
     </body>
     <footer>
